@@ -23,6 +23,8 @@
 
 import os
 
+import bzrlib.plugin
+import bzrlib.plugins
 from bzrlib.tests import TestCaseInTempDir
 
 class PluginTest(TestCaseInTempDir):
@@ -77,3 +79,39 @@ class cmd_myplug(bzrlib.commands.Command):
 """
 
 # TODO: Write a test for plugin decoration of commands.
+
+class TestOneNamedPluginOnly(TestCaseInTempDir):
+
+    activeattributes = {}
+
+    def test_plugins_with_the_same_name_are_not_loaded(self):
+        # This test tests that having two plugins in different
+        # directories does not result in both being loaded.
+        # get a file name we can use which is also a valid attribute
+        # for accessing in activeattributes. - we cannot give import parameters.
+        tempattribute = "0"
+        self.failIf(tempattribute in self.activeattributes)
+        # set a place for the plugins to record their loading, and at the same
+        # time validate that the location the plugins should record to is
+        # valid and correct.
+        bzrlib.tests.test_plugins.TestOneNamedPluginOnly.activeattributes \
+            [tempattribute] = []
+        self.failUnless(tempattribute in self.activeattributes)
+        # create two plugin directories
+        os.mkdir('first')
+        os.mkdir('second')
+        # write a plugin that will record when its loaded in the 
+        # tempattribute list.
+        template = ("from bzrlib.tests.test_plugins import TestOneNamedPluginOnly\n"
+                    "TestOneNamedPluginOnly.activeattributes[%r].append('%s')\n")
+        print >> file(os.path.join('first', 'plugin.py'), 'w'), template % (tempattribute, 'first')
+        print >> file(os.path.join('second', 'plugin.py'), 'w'), template % (tempattribute, 'second')
+        try:
+            bzrlib.plugin.load_from_dirs(['first', 'second'])
+            self.assertEqual(['first'], self.activeattributes[tempattribute])
+        finally:
+            # remove the plugin 'plugin'
+            del self.activeattributes[tempattribute]
+            if getattr(bzrlib.plugins, 'plugin', None):
+                del bzrlib.plugins.plugin
+        self.failIf(getattr(bzrlib.plugins, 'plugin', None))
